// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sparseq basics 1`] = `
Float32Array [
  1,
  1,
  1,
  1,
  1,
  2,
  2,
  2,
  2,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
]
`;

exports[`sparseq interpolation 1`] = `
Float32Array [
  1,
  1,
  1.5,
  1.5,
  2,
  2,
  2.5,
  2.5,
  3,
  3,
  3.25,
  3.25,
  3.5,
  3.5,
  3.75,
  3.75,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
]
`;

exports[`sparseq interpolation with loop 1`] = `
Float32Array [
  1,
  1,
  1.5,
  1.5,
  2,
  2,
  1.5,
  1.5,
  2,
  2,
  1.5,
  1.5,
  2,
  2,
  1.5,
  1.5,
  2,
  2,
  1.5,
  1.5,
  2,
  2,
  1.5,
  1.5,
]
`;

exports[`sparseq loop 1`] = `
Float32Array [
  1,
  1,
  1,
  1,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
]
`;

exports[`sparseq loop follow 1`] = `
Float32Array [
  1,
  1,
  2,
  2,
  3,
  3,
  2,
  2,
  3,
  3,
  2,
  2,
  3,
  3,
  2,
  2,
  3,
  3,
  2,
  2,
  3,
  3,
  2,
  2,
  3,
  3,
  2,
  2,
  3,
  3,
  2,
  2,
]
`;

exports[`sparseq loop follow 2`] = `
Float32Array [
  3,
  3,
  1,
  1,
  2,
  2,
  1,
  1,
  2,
  2,
  1,
  1,
  2,
  2,
  1,
  1,
  2,
  2,
  1,
  1,
  2,
  2,
  1,
  1,
  2,
  2,
  1,
  1,
  2,
  2,
  1,
  1,
]
`;

exports[`sparseq loop on then off 1`] = `
Float32Array [
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
]
`;

exports[`sparseq no trigger on reset 1`] = `
Float32Array [
  2,
  2,
  2,
  2,
  2,
  2,
  2,
  2,
]
`;

exports[`sparseq no trigger on reset 2`] = `
Float32Array [
  0,
  0,
  0,
  0,
]
`;

exports[`sparseq sub-tick interpolation 1`] = `
Float32Array [
  1,
  1.25,
  1.5,
  1.75,
  2,
  2.25,
  2.5,
  2.75,
  3,
  3.125,
  3.25,
  3.375,
  3.5,
  3.625,
  3.75,
  3.875,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
]
`;

exports[`sparseq sub-tick interpolation 2`] = `
Float32Array [
  1,
  1.25,
  1.5,
  1.75,
  2,
  2.25,
  2.5,
  2.75,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
  3,
]
`;

exports[`sparseq sub-tick interpolation with loop 1`] = `
Float32Array [
  0,
  0.125,
  0.25,
  0.375,
  0.5,
  0.625,
  0.75,
  0.875,
  0,
  0.125,
  0.25,
  0.375,
  0.5,
  0.625,
  0.75,
  0.875,
  0,
  0.125,
  0.25,
  0.375,
  0.5,
  0.625,
  0.75,
  0.875,
]
`;

exports[`sparseq sub-tick interpolation with loop higher res 1`] = `
Float32Array [
  0,
  0.012500000186264515,
  0.02500000037252903,
  0.03750000149011612,
  0.05000000074505806,
  0.0625,
  0.07500000298023224,
  0.08749999850988388,
  0.10000000149011612,
  0.11249999701976776,
  0.125,
  0.13750000298023224,
  0.15000000596046448,
  0.16249999403953552,
  0.17499999701976776,
  0.1875,
  0.20000000298023224,
  0.21250000596046448,
  0.22499999403953552,
  0.23749999701976776,
  0.25,
  0.26249998807907104,
  0.2750000059604645,
  0.2874999940395355,
  0.30000001192092896,
  0.3125,
  0.32499998807907104,
  0.3375000059604645,
  0.3499999940395355,
  0.36250001192092896,
  0.375,
  0.38749998807907104,
  0.4000000059604645,
  0.4124999940395355,
  0.42500001192092896,
  0.4375,
  0.44999998807907104,
  0.4625000059604645,
  0.4749999940395355,
  0.48750001192092896,
  0.5,
  0.512499988079071,
  0.5249999761581421,
  0.5375000238418579,
  0.550000011920929,
  0.5625,
  0.574999988079071,
  0.5874999761581421,
  0.6000000238418579,
  0.612500011920929,
  0.625,
  0.637499988079071,
  0.6499999761581421,
  0.6625000238418579,
  0.675000011920929,
  0.6875,
  0.699999988079071,
  0.7124999761581421,
  0.7250000238418579,
  0.737500011920929,
  0.75,
  0.762499988079071,
  0.7749999761581421,
  0.7875000238418579,
  0.800000011920929,
  0.8125,
  0.824999988079071,
  0.8374999761581421,
  0.8500000238418579,
  0.862500011920929,
  0.875,
  0.887499988079071,
  0.8999999761581421,
  0.9125000238418579,
  0.925000011920929,
  0.9375,
  0.949999988079071,
  0.9624999761581421,
  0.9750000238418579,
  0.987500011920929,
  0,
  0.012500000186264515,
  0.02500000037252903,
  0.03750000149011612,
  0.05000000074505806,
  0.0625,
  0.07500000298023224,
  0.08749999850988388,
  0.10000000149011612,
  0.11249999701976776,
  0.125,
  0.13750000298023224,
  0.15000000596046448,
  0.16249999403953552,
  0.17499999701976776,
  0.1875,
  0.20000000298023224,
  0.21250000596046448,
  0.22499999403953552,
  0.23749999701976776,
  0.25,
  0.26249998807907104,
  0.2750000059604645,
  0.2874999940395355,
  0.30000001192092896,
  0.3125,
  0.32499998807907104,
  0.3375000059604645,
  0.3499999940395355,
  0.36250001192092896,
  0.375,
  0.38749998807907104,
  0.4000000059604645,
  0.4124999940395355,
  0.42500001192092896,
  0.4375,
  0.44999998807907104,
  0.4625000059604645,
  0.4749999940395355,
  0.48750001192092896,
  0.5,
  0.512499988079071,
  0.5249999761581421,
  0.5375000238418579,
  0.550000011920929,
  0.5625,
  0.574999988079071,
  0.5874999761581421,
  0.6000000238418579,
  0.612500011920929,
  0.625,
  0.637499988079071,
  0.6499999761581421,
  0.6625000238418579,
  0.675000011920929,
  0.6875,
  0.699999988079071,
  0.7124999761581421,
  0.7250000238418579,
  0.737500011920929,
  0.75,
  0.762499988079071,
  0.7749999761581421,
  0.7875000238418579,
  0.800000011920929,
  0.8125,
  0.824999988079071,
  0.8374999761581421,
  0.8500000238418579,
  0.862500011920929,
  0.875,
  0.887499988079071,
  0.8999999761581421,
  0.9125000238418579,
  0.925000011920929,
  0.9375,
  0.949999988079071,
  0.9624999761581421,
  0.9750000238418579,
  0.987500011920929,
  0,
  0.012500000186264515,
  0.02500000037252903,
  0.03750000149011612,
  0.05000000074505806,
  0.0625,
  0.07500000298023224,
  0.08749999850988388,
  0.10000000149011612,
  0.11249999701976776,
  0.125,
  0.13750000298023224,
  0.15000000596046448,
  0.16249999403953552,
  0.17499999701976776,
  0.1875,
  0.20000000298023224,
  0.21250000596046448,
  0.22499999403953552,
  0.23749999701976776,
  0.25,
  0.26249998807907104,
  0.2750000059604645,
  0.2874999940395355,
  0.30000001192092896,
  0.3125,
  0.32499998807907104,
  0.3375000059604645,
  0.3499999940395355,
  0.36250001192092896,
  0.375,
  0.38749998807907104,
  0.4000000059604645,
  0.4124999940395355,
  0.42500001192092896,
  0.4375,
  0.44999998807907104,
  0.4625000059604645,
  0.4749999940395355,
  0.48750001192092896,
  0.5,
  0.512499988079071,
  0.5249999761581421,
  0.5375000238418579,
  0.550000011920929,
  0.5625,
  0.574999988079071,
  0.5874999761581421,
  0.6000000238418579,
  0.612500011920929,
  0.625,
  0.637499988079071,
  0.6499999761581421,
  0.6625000238418579,
  0.675000011920929,
  0.6875,
  0.699999988079071,
  0.7124999761581421,
  0.7250000238418579,
  0.737500011920929,
  0.75,
  0.762499988079071,
  0.7749999761581421,
  0.7875000238418579,
  0.800000011920929,
  0.8125,
  0.824999988079071,
  0.8374999761581421,
  0.8500000238418579,
  0.862500011920929,
  0.875,
  0.887499988079071,
  0.8999999761581421,
  0.9125000238418579,
  0.925000011920929,
  0.9375,
  0.949999988079071,
  0.9624999761581421,
  0.9750000238418579,
  0.987500011920929,
  0,
  0.012500000186264515,
  0.02500000037252903,
  0.03750000149011612,
  0.05000000074505806,
  0.0625,
  0.07500000298023224,
  0.08749999850988388,
  0.10000000149011612,
  0.11249999701976776,
  0.125,
  0.13750000298023224,
  0.15000000596046448,
  0.16249999403953552,
  0.17499999701976776,
  0.1875,
  0.20000000298023224,
  0.21250000596046448,
  0.22499999403953552,
  0.23749999701976776,
  0.25,
  0.26249998807907104,
  0.2750000059604645,
  0.2874999940395355,
  0.30000001192092896,
  0.3125,
  0.32499998807907104,
  0.3375000059604645,
  0.3499999940395355,
  0.36250001192092896,
  0.375,
  0.38749998807907104,
  0.4000000059604645,
  0.4124999940395355,
  0.42500001192092896,
  0.4375,
  0.44999998807907104,
  0.4625000059604645,
  0.4749999940395355,
  0.48750001192092896,
  0.5,
  0.512499988079071,
  0.5249999761581421,
  0.5375000238418579,
  0.550000011920929,
  0.5625,
  0.574999988079071,
  0.5874999761581421,
  0.6000000238418579,
  0.612500011920929,
  0.625,
  0.637499988079071,
  0.6499999761581421,
  0.6625000238418579,
  0.675000011920929,
  0.6875,
  0.699999988079071,
  0.7124999761581421,
  0.7250000238418579,
  0.737500011920929,
  0.75,
  0.762499988079071,
  0.7749999761581421,
  0.7875000238418579,
  0.800000011920929,
  0.8125,
  0.824999988079071,
  0.8374999761581421,
  0.8500000238418579,
  0.862500011920929,
  0.875,
  0.887499988079071,
  0.8999999761581421,
  0.9125000238418579,
  0.925000011920929,
  0.9375,
  0.949999988079071,
  0.9624999761581421,
  0.9750000238418579,
  0.987500011920929,
  0,
  0.012500000186264515,
  0.02500000037252903,
  0.03750000149011612,
  0.05000000074505806,
  0.0625,
  0.07500000298023224,
  0.08749999850988388,
  0.10000000149011612,
  0.11249999701976776,
  0.125,
  0.13750000298023224,
  0.15000000596046448,
  0.16249999403953552,
  0.17499999701976776,
  0.1875,
  0.20000000298023224,
  0.21250000596046448,
  0.22499999403953552,
  0.23749999701976776,
  0.25,
  0.26249998807907104,
  0.2750000059604645,
  0.2874999940395355,
  0.30000001192092896,
  0.3125,
  0.32499998807907104,
  0.3375000059604645,
  0.3499999940395355,
  0.36250001192092896,
  0.375,
  0.38749998807907104,
  0.4000000059604645,
  0.4124999940395355,
  0.42500001192092896,
  0.4375,
  0.44999998807907104,
  0.4625000059604645,
  0.4749999940395355,
  0.48750001192092896,
  0.5,
  0.512499988079071,
  0.5249999761581421,
  0.5375000238418579,
  0.550000011920929,
  0.5625,
  0.574999988079071,
  0.5874999761581421,
  0.6000000238418579,
  0.612500011920929,
  0.625,
  0.637499988079071,
  0.6499999761581421,
  0.6625000238418579,
  0.675000011920929,
  0.6875,
  0.699999988079071,
  0.7124999761581421,
  0.7250000238418579,
  0.737500011920929,
  0.75,
  0.762499988079071,
  0.7749999761581421,
  0.7875000238418579,
  0.800000011920929,
  0.8125,
  0.824999988079071,
  0.8374999761581421,
  0.8500000238418579,
  0.862500011920929,
  0.875,
  0.887499988079071,
  0.8999999761581421,
  0.9125000238418579,
  0.925000011920929,
  0.9375,
  0.949999988079071,
  0.9624999761581421,
  0.9750000238418579,
  0.987500011920929,
  0,
  0.012500000186264515,
  0.02500000037252903,
  0.03750000149011612,
  0.05000000074505806,
  0.0625,
  0.07500000298023224,
  0.08749999850988388,
  0.10000000149011612,
  0.11249999701976776,
  0.125,
  0.13750000298023224,
  0.15000000596046448,
  0.16249999403953552,
  0.17499999701976776,
  0.1875,
  0.20000000298023224,
  0.21250000596046448,
  0.22499999403953552,
  0.23749999701976776,
  0.25,
  0.26249998807907104,
  0.2750000059604645,
  0.2874999940395355,
  0.30000001192092896,
  0.3125,
  0.32499998807907104,
  0.3375000059604645,
  0.3499999940395355,
  0.36250001192092896,
  0.375,
  0.38749998807907104,
  0.4000000059604645,
  0.4124999940395355,
  0.42500001192092896,
  0.4375,
  0.44999998807907104,
  0.4625000059604645,
  0.4749999940395355,
  0.48750001192092896,
  0.5,
  0.512499988079071,
  0.5249999761581421,
  0.5375000238418579,
  0.550000011920929,
  0.5625,
  0.574999988079071,
  0.5874999761581421,
  0.6000000238418579,
  0.612500011920929,
  0.625,
  0.637499988079071,
  0.6499999761581421,
  0.6625000238418579,
  0.675000011920929,
  0.6875,
  0.699999988079071,
  0.7124999761581421,
  0.7250000238418579,
  0.737500011920929,
  0.75,
  0.762499988079071,
  0.7749999761581421,
  0.7875000238418579,
  0.800000011920929,
  0.8125,
  0.824999988079071,
  0.8374999761581421,
  0.8500000238418579,
  0.862500011920929,
  0.875,
  0.887499988079071,
  0.8999999761581421,
  0.9125000238418579,
  0.925000011920929,
  0.9375,
  0.949999988079071,
  0.9624999761581421,
  0.9750000238418579,
  0.987500011920929,
  0,
  0.012500000186264515,
  0.02500000037252903,
  0.03750000149011612,
  0.05000000074505806,
  0.0625,
  0.07500000298023224,
  0.08749999850988388,
  0.10000000149011612,
  0.11249999701976776,
  0.125,
  0.13750000298023224,
  0.15000000596046448,
  0.16249999403953552,
  0.17499999701976776,
  0.1875,
  0.20000000298023224,
  0.21250000596046448,
  0.22499999403953552,
  0.23749999701976776,
  0.25,
  0.26249998807907104,
  0.2750000059604645,
  0.2874999940395355,
  0.30000001192092896,
  0.3125,
  0.32499998807907104,
  0.3375000059604645,
  0.3499999940395355,
  0.36250001192092896,
  0.375,
  0.38749998807907104,
]
`;
